# Q-Align

./: pyproject.toml
q_align/model/: modeling_llama2.py
