[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "q_align"
version = "1.2.0"
description = "Q-ALIGN: Teaching LMMs for Visual Scoring via Discrete Text-Defined Levels (based on mPLUG-Owl2)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1",
    "transformers==4.37.2",
    "tokenizers==0.15.2",
    "sentencepiece==0.2.0",
    "shortuuid",
    "accelerate==0.33.0",
    "peft==0.12.0",
    "bitsandbytes==0.43.2",
    "pydantic<2,>=1",
    "markdown2[all]",
    "numpy==1.26.4",
    "scikit-learn==1.14.0",
    "gradio==4.39.0",
    "gradio_client==1.1.1",
    "requests==2.32.3",
    "httpx==0.27.0",
    "uvicorn==0.30.3",
    "fastapi==0.111.1",
    "icecream==2.1.3",
    "einops==0.8.0",
    "einops-exts==0.0.4",
    "decord==0.6.0",
    "scipy==1.14.0",
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]

[project.urls]
"Bug Tracker" = "https://github.com/Q-Future/Q-Align/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
